<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.soeguet</groupId>
    <artifactId>teamchat</artifactId>
    <version>v1.0.4</version>

    <name>teamchat</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <!-- Setzt die Java-Version -->
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.compilerArgs>--enable-preview</maven.compiler.compilerArgs>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.4</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.2.5</version>
        </dependency>

        <dependency>
            <groupId>com.miglayout</groupId>
            <artifactId>miglayout-swing</artifactId>
            <version>11.1</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.16.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.15.2</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>

        <dependency>
            <groupId>com.dorkbox</groupId>
            <artifactId>Notify</artifactId>
            <version>4.4</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>

        <finalName>teamchat</finalName>

        <resources>

            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
            </resource>

        </resources>

        <plugins>

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>

                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>

            </plugin>

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>

                <executions>

                    <execution>

                        <goals>
                            <goal>shade</goal>
                        </goals>

                        <phase>package</phase>

                        <configuration>

                            <release>21</release>
                            <!-- Set your Java version -->
                            <compilerArgs>
                                <arg>--enable-preview</arg>
                            </compilerArgs>

                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/versions/9/module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>

                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.soeguet.Main</mainClass>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"></transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer"></transformer>
                            </transformers>

                        </configuration>

                    </execution>

                </executions>

            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.41.1</version>
                <configuration>
                    <pom>
                        <!-- These are the defaults, you can override if you want -->
                        <includes>
                            <include>pom.xml</include>
                        </includes>

                        <sortPom>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <!-- Indentation -->
                            <expandEmptyElements>true</expandEmptyElements>
                            <!-- Should empty elements be expanded-->
                        </sortPom>

                    </pom>
                    <java>
                        <!-- These are the defaults, you can override if you want -->
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>

                        <!-- Cleanthat will refactor your code, but it may break your style: apply it before your formatter -->
                        <!-- <cleanthat /> -->
                        <!-- has its own section below -->
                        <googleJavaFormat>
                            <!-- <version>21</version> -->
                            <!-- optional, 1.8 is minimum supported version -->
                            <!-- <style>GOOGLE</style> -->
                            <style>AOSP</style>
                            <!-- or AOSP (optional) -->
                            <reflowLongStrings>true</reflowLongStrings>
                            <!-- optional -->
                            <formatJavadoc>true</formatJavadoc>
                            <!-- optional -->
                            <!-- optional: custom group artifact (you probably don't need this) -->
                            <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
                        </googleJavaFormat>

                        <!-- <importOrder /> -->
                        <!-- </importOrder> -->

                        <removeUnusedImports></removeUnusedImports>

                        <formatAnnotations></formatAnnotations>
                        <!-- fixes formatting of type annotations, see below -->

                        <!-- <licenseHeader> -->
                        <!--     <content>/* (C)$YEAR */</content> -->
                        <!-- or <file>${project.basedir}/license-header</file> -->
                        <!-- </licenseHeader> -->
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
